<resources>
    <string name="app_name">NUMAD21S-NavyasaiPoranki</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="about">About</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fullname">Navyasai Poranki</string>
    <string name="email">poranki.n@northeastern.edu</string>
    <string name="title_activity_clicky_click">ClickyClick</string>
    <string name="clicky_click">Clicky Click</string>
    <string name="string_add_url">Add a Url by clicking on below button</string>
    <string name="string_url_name">Website Name</string>
    <string name="string_url">url of the website</string>
    <string name="string_url_added">Successfully Added the Url</string>
    <string name="string_error_message">URL is not valid!</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="btnB">B</string>
    <string name="btnC">C</string>
    <string name="btnD">D</string>
    <string name="btnE">E</string>
    <string name="btnF">F</string>
    <string name="btnA">A</string>
    <string name="textview" />
    <string name="addLink">AddLink</string>
    <string name="floatingBtn">Floating Button</string>
    <string name="btnLocation">Location</string>
    <string name="btnCurrentLocation">CurrentLocation</string>
    <string name="btnService">WebService</string>
    <string name="btnFetch">Cocktail Drink</string>
    <string name="get_a_random_cocktail_drink">Click to get a Random Cocktail Drink</string>
    <string name="txtCocktail" />
</resources>